mysql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      app: mysql
  template:
    metadata:
      labels:
        tier: backend
        app: mysql
    spec:
      imagePullSecrets:
      - name: harbor-credentials
      containers:
      - name: mysql
        image: harbor.kolon.local/library/mysql:8.0 # upstream-version: 8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    tier: backend
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
  clusterIP: None
