wordpress.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress
spec:
  serviceName: wordpress
  replicas: 2
  selector:
    matchLabels:
      tier: frontend
      app: wordpress
  template:
    metadata:
      labels:
        tier: frontend
        app: wordpress
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - wordpress
            topologyKey: kubernetes.io/hostname
      containers:
      - name: wordpress
        image: harbor.kolon.local/library/wordpress:23 # upstream-version: 6.0
        resources:
          requests:
            cpu: "200m"
            memory: "300Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wordpress-storage
          mountPath: /var/www/html
  volumeClaimTemplates:
  - metadata:
      name: wordpress-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
      storageClassName: nutanix-volume
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  selector:
    tier: frontend
    app: wordpress
  ports:
  - port: 80
    targetPort: 80
  clusterIP: None
